[package]
name = "envelope"
version = "0.5.0"
license = "MIT or Unlicense"
edition = "2021"
authors = ["Mattia Righetti <matt95.righetti@gmail.com>"]
repository = "https://github.com/mattrighetti/envelope"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
prettytable-rs = "0.10.0"
tokio = { version = "1", features = ["macros", "rt"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
