[package]
name = "envelope"
version = "0.7.1"
license = "MIT or Unlicense"
edition = "2024"
authors = ["Mattia Righetti <matt95.righetti@gmail.com>"]
repository = "https://github.com/mattrighetti/envelope"
readme = "README.md"

[dependencies]
anyhow = "1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4", features = ["derive"] }
prettytable-rs = "0.10.0"
rand = "0.10.0"
rpassword = "7.4.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt"] }
zeroize = "1.8.2"

[dev-dependencies]
tempfile = "3"
